--- a/example_site/templates/index.html
+++ b/example_site/templates/index.html
@@ -13,11 +13,13 @@
     <table>
         <tr>
             <th>Headline</th>
+            <th>URL</th>
             <th>Source</th>
         </tr>
     {% for story in stories %}
         <tr>
             <td><a href="{{ story.url }}"">{{ story.title }}</a></td>
+            <td>{{ story.url }}</td>
             <td>{{ story.source_name }}</td>
         </tr>
     {% endfor %}
