working version with description

--- a/example_site/templates/index.html
+++ b/example_site/templates/index.html
@@ -30,7 +30,7 @@
             <p><strong>{{ story.source_name }}</strong><p>
           </div>
           <div class="flip-card-back">
-            <p><a href="{{ story.url }}" target="_blank">{{ story.title }}</a></p>
+            <p><a href="{{ story.url }}" target="_blank">{{ story.description }}</a></p>
           </div>
         </div> 
       </div>
