--- a/example_site/templates/index.html
+++ b/example_site/templates/index.html
@@ -1,21 +1,19 @@
 {% extends 'base.html'%}
 
 {% block head %}
-<link href="static\main1.css" rel="stylesheet" type="text/css" media="all">
+<link href={{ url_for('static', filename = 'main1.css') }} rel="stylesheet" type="text/css" media="all">
 {% endblock %}
 
 {% block body %}
 <ul>
-    <li><a class="active" href="/">Home</a></li>
+    <li><a href="/">Home</a></li>
+    <li><a href="/international/">International</a></li>
   </ul>
   <div class="popup" onclick="myFunction()">Consent Notification!
     <span class="popuptext" id="myPopup">Cookies</span>
   </div>
 <div class = "content">
-    <h1 style="text-align: center">Trending Stories</h1>
-    {% if stories|length < 1 %}
-    <a href="/update/">Refresh stories</a>
-    {% else %}
+    <h1 style="text-align: center">{{ title }}</h1>
     <div class="row">
         {% for story in stories %}
         <div class="column">
@@ -33,7 +31,6 @@
         </div>
         {% endfor %}
     </div>
-    {% endif %}
 </div>
 
 <script>
