--- a/example_site/templates/left.html
+++ b/example_site/templates/left.html
@@ -1,3 +1,10 @@
+{% extends 'base.html'%}
+
+{% block head %}
+{% endblock %}
+
+{% block body %}
+<style>
 body{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: medium;
@@ -79,3 +86,31 @@ li a:hover:not(.active) {
   background-color: transparent;
   text-decoration: none;
 }
+</style>
+<ul>
+    <li><a href="/">Home</a></li>
+    <li><a class="active" href="/left/">Left-Wing</a></li>
+    <li><a href="/neutral/">Neutral</a></li>
+    <li><a href="/right/">Right-Wing</a></li>
+    <li><a href="/international/">International</a></li>
+  </ul>
+<div class = "content">
+    <h1 style="text-align: center">Left-Wing Stories</h1>
+    {% if stories|length < 1 %}
+    <a href="/">Refresh stories</a>
+    {% else %}
+    <div class="row">
+      {% for story in stories %}
+      <div class="column">
+         <div class="card">
+          <h3><center><strong>{{ story.source_name }}</strong></center></h3>
+          <div class="div1"><a href="{{ story.url }}" target="_blank"><figure><center><img style="width:100%" src= {{ story.image_url }}></figure></center><figcaption><b>{{ story.title }}</b></figcaption></a></div>
+          <p style="font-size: 12px;"><i>{{ story.description }}</i><p>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+    <a href="/">Refresh stories</a>
+    {% endif %}
+</div>
+{% endblock %}
