--- a/example_site/templates/right.html
+++ b/example_site/templates/right.html
@@ -91,7 +91,7 @@
 <ul>
     <li><a href="/">Home</a></li>
     <li><a href="/left/">Left-Wing</a></li>
-    <li><a href="/neutral/">Neutral</a></li>
+    <li><a href="/center/">Center</a></li>
     <li><a class="active" href="/right/">Right-Wing</a></li>
     <li><a href="/international/">International</a></li>
   </ul>
