--- a/example_site/static/main1.css
+++ b/example_site/static/main1.css
@@ -79,3 +79,41 @@ li a:hover:not(.active) {
   background-color: transparent;
   text-decoration: none;
 }
+
+.cookie-banner-container {
+  background: skyblue;
+  padding: 8px 32px;
+  border-radius: 8px 8px 0 0;
+  position: fixed;
+  left: 24px;
+  right: 24px;
+  bottom: 300px;
+  max-width: 500px;
+  margin: 0 auto;
+  box-shadow: 2px -8px 18px black;
+
+  transition: 400ms;
+}
+.cookie-banner-container.active{
+  bottom: -100%;
+}
+.cookie-banner-container p {
+  font-size: 18px;
+}
+
+.cookie-banner-container p a{
+  color: black
+}
+
+.cookie-banner-container button {
+  border: 0;
+  padding: 16px 48px; 
+  background: white;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 16px 0;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: pointer;
+  box-shadow: 0 -8px 16px rgba(0,0,0,0.2);
+
+}
