--- a/example_site/templates/left.html
+++ b/example_site/templates/left.html
@@ -90,7 +90,7 @@ li a:hover:not(.active) {
 <ul>
     <li><a href="/">Home</a></li>
     <li><a class="active" href="/left/">Left-Wing</a></li>
-    <li><a href="/neutral/">Neutral</a></li>
+    <li><a href="/center/">Center</a></li>
     <li><a href="/right/">Right-Wing</a></li>
     <li><a href="/international/">International</a></li>
   </ul>
