--- a/example_site/templates/index.html
+++ b/example_site/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%}
 
 {% block head %}
-<link href={{ url_for('static', filename = 'css/main1.css') }} rel="stylesheet" type="text/css" media="all">
+<link href={{ url_for('static', filename = 'main1.css') }} rel="stylesheet" type="text/css" media="all">
 {% endblock %}
 
 {% block body %}
@@ -9,7 +9,7 @@
     <li><a href="/">Home</a></li>
     <li><a href="/international/">International</a></li>
   </ul>
-  <div onclick="logClick('consent_notification');">Consent Notification!
+  <div onclick="logEvent('click', 'consent_notification');">Consent Notification!
   </div>
 <div class = "content">
     <h1 style="text-align: center">{{ title }}</h1>
@@ -31,22 +31,4 @@
         {% endfor %}
     </div>
 </div>
-{% endblock %}
-
-{% block script %}
-<script="{{ url_for('static', filename='js/jquery-3.5.1.js') }}"></script>
-
-<script>
-  function logClick(element_id) {
-    fetch(`${window.location}`, {
-      method: "POST",
-      credentials: "include",
-      body: element_id,
-      cache: 'no-cache',
-      headers: new Headers({
-        'content-type': 'application/json'
-      })
-    });
-  }
-</script>
 {% endblock %}
