--- a/example_site/templates/base.html
+++ b/example_site/templates/base.html
@@ -9,18 +9,20 @@
 </head>
 <body>
     {% block body %}{% endblock %}
+    <script src = {{ url_for('static', filename = 'js/jquery-3.5.1.min.js') }}>
+    </script>
     <script>
-        // Set page to log when unloading
-         // Currently broken window.addEventListener('unload', logEvent("page_close"));
+        // Log page close
+        $(window).on( "unload", logEvent("page_close") );
       
-        // Send a POST request to server logging a click or page close.
-        // Takes parameters event_type "click" or "page_close", and 
-        // optional element_id 
+        /* Send a POST request to server logging a click or page close.
+          Takes string parameters event_type - "click" or "page_close", and 
+          optional element_id - what was clicked on  */
         function logEvent(event_type, element_id="none") {
       
           // Compile parameters into JSON object
           var data = {
-            event_type: event_type,
+            event_type : event_type,
             element_id : element_id
           };
       
