--- a/example_site/templates/base.html
+++ b/example_site/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block head %}{% endblock %}
 </head>
-<body>
+<body onload = "determine_layout(), disableScroll()">
     {% block body %}{% endblock %}
 </body>
 </html
