Integrated logging with new privacy banner, changed determination of banner style to be determined by user id hash, added logging of user agent and clicks on story links

--- a/example_site/templates/index.html
+++ b/example_site/templates/index.html
@@ -19,7 +19,7 @@
       <div class="column">
          <div class="card">
           <h3><center><strong>{{ story.source_name }}</strong></center></h3>
-          <div class="div1"><a href="{{ story.url }}" target="_blank"><figure><center><img style="width:100%" src= {{ story.image_url }}></figure></center><figcaption><b>{{ story.title }}</b></figcaption></a></div>
+          <div class="div1" onclick="logEvent('click', '{{ story.url }}');"><a href="{{ story.url }}" target="_blank"><figure><center><img style="width:100%" src= {{ story.image_url }}></figure></center><figcaption><b>{{ story.title }}</b></figcaption></a></div>
           <p style="font-size: 12px;"><i>{{ story.description }}</i><p>
         </div>
       </div>
@@ -27,7 +27,7 @@
     </div>
     <div id = "notification" class ="cookie-banner-container">
       <p align="right">
-        <input type="button" value="X" onclick="enableScroll(), myFunction()"/>
+        <input type="button" value="X" onclick="enableScroll(), myFunction(), logEvent('click', 'button_x', banner_style);"/>
       </p>      
       <center>
       <p id="text">
@@ -36,20 +36,34 @@
       <p id="text">
         Please look at our cookie policies.
       </p>
-<<<<<<< HEAD
-      <button type="button" onclick="enableScroll(), myFunction()">
+      <button type="button" onclick="enableScroll(), myFunction(), logEvent('click', 'button1_accept_cookies', banner_style);">
         Accept cookies
-=======
-      <button type="button" onclick="myFunction(); logEvent('click', 'cookie_button');">
-        I agree.
->>>>>>> master
       </button>
       <button type="button" id="button2">
         Do not sell my information
       </button>
       </center>
     </div>
+
     <script>
+
+    // Declare global variables for banner style
+    
+    //Code to determine based on hash of user IP address
+    var left_right = {{ left_right }} ;
+    var up_down = {{ up_down }} ;
+    var versions = {{ versions }} ;
+    if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+        left_right=1;
+      }
+    var banner_style = String(left_right) + String(up_down) + String(versions);
+
+    /* Code for random determination of privacy banner
+      var left_right = Math.floor(Math.random() * 3);
+      var up_down= Math.floor(Math.random() * 2);
+      var versions=Math.floor(Math.random()*2)
+    */
+
       function disableScroll() { 
     // Get the current page scroll position 
     scrollTop = window.pageYOffset || document.documentElement.scrollTop; 
@@ -64,15 +78,11 @@
 function enableScroll() { 
     window.onscroll = function() {}; 
 } 
-    function determine_layout() {
-      var left_right = Math.floor(Math.random() * 3);
-      var up_down= Math.floor(Math.random() * 2);
-      var versions=Math.floor(Math.random()*2)
+
+function determine_layout() {
+
       var x = document.getElementById("notification");
       var button2 = document.getElementById("button2");
-      if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
-        left_right=1;
-      }
       if (String(left_right) == "0"){
         x.style.left = "10px";
         x.style.right="";
@@ -93,11 +103,11 @@ function enableScroll() {
       }
       if (String(versions) == "0"){
         button2.innerHTML="Read our cookie policy"
-        button2.setAttribute( "onClick", "javascript: readMore();" )
+        button2.setAttribute( "onClick", "javascript: readMore(), logEvent('click', 'button2_read_more', banner_style);" )
       }
       else{
         button2.innerHTML="Do not sell my information"
-        button2.setAttribute( "onClick", "javascript: myFunction(), enableScroll();" )
+        button2.setAttribute( "onClick", "javascript: myFunction(), enableScroll(), logEvent('click', 'button2_do_not_sell', banner_style);" )
       }
     }
     function readMore(){
@@ -105,7 +115,7 @@ function enableScroll() {
       var text = document.getElementById("text");
       text.innerHTML="Cookie Policy!";
       button2.innerHTML="Don't allow";
-      button2.setAttribute( "onClick", "javascript: myFunction(), enableScroll();;" )
+      button2.setAttribute( "onClick", "javascript: myFunction(), enableScroll(), logEvent('click', 'button2_don't_allow', banner_style);" )
     }
       function myFunction() {
       var x = document.getElementById("notification");
