--- a/example_site/templates/index.html
+++ b/example_site/templates/index.html
@@ -36,13 +36,8 @@
       <p id="text">
         Please look at our cookie policies.
       </p>
-<<<<<<< HEAD
-      <button type="button" onclick="enableScroll(), myFunction()">
+      <button type="button" onclick="enableScroll(), myFunction(), logEvent('click', 'cookie_button')">
         Accept cookies
-=======
-      <button type="button" onclick="myFunction(); logEvent('click', 'cookie_button');">
-        I agree.
->>>>>>> master
       </button>
       <button type="button" id="button2">
         Do not sell my information
@@ -69,8 +64,11 @@ function enableScroll() {
       var up_down= Math.floor(Math.random() * 2);
       var versions=Math.floor(Math.random()*2)
       var x = document.getElementById("notification");
+      var body=document.getElementById("body");
       var button2 = document.getElementById("button2");
-      if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+      var screenWidth=window.innerWidth;
+      var screenHeight=String(window.innerHeight -340)+"px";
+      if (screenWidth<500){
         left_right=1;
       }
       if (String(left_right) == "0"){
@@ -86,7 +84,7 @@ function enableScroll() {
         x.style.right="10px"
       }
       if (String(up_down) == "0"){
-        x.style.bottom="450px";
+        x.style.bottom=screenHeight;
       }
       else if (String(up_down) =="1"){
         x.style.bottom="10px";
@@ -101,9 +99,10 @@ function enableScroll() {
       }
     }
     function readMore(){
+      var test=window.innerHeight -300;
       var button2 = document.getElementById("button2");
       var text = document.getElementById("text");
-      text.innerHTML="Cookie Policy!";
+      text.innerHTML=String(test);
       button2.innerHTML="Don't allow";
       button2.setAttribute( "onClick", "javascript: myFunction(), enableScroll();;" )
     }
