--- a/example_site/static/main1.css
+++ b/example_site/static/main1.css
@@ -113,3 +113,45 @@ li a:hover:not(.active) {
   cursor: pointer;
   box-shadow: 0 -8px 16px rgba(0,0,0,0.2);
 }
+.overlay {
+  height: 100%;
+  width: 100%;
+  display: none;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9);
+}
+.footer {
+  padding-top: 20px;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  border: 3px;
+  border-color: black;
+  color: white;
+  text-align: center;
+}
+.footer a:link {
+  color: black;
+  background-color: transparent;
+  text-decoration: none;
+}
+.footer a:hover {
+  color: blue;
+  background-color: transparent;
+  text-decoration: underline;
+}
+.footer a:visited {
+  color: black;
+  background-color: transparent;
+  text-decoration: none;
+}
+.policy {
+  color: black;
+  background-color: transparent;
+  text-decoration: none;
+}
